Shortening our discussion

--- a/Project Report Final.ipynb
+++ b/Project Report Final.ipynb
@@ -26,46 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "20fcd609-06c2-4ffb-834e-c863073405cc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.7     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.9\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\n",
-      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 1.0.0 ──\n",
-      "\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mbroom       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mrsample     \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mdials       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mtune        \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.0.0\n",
-      "\u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.0.1     \n",
-      "\n",
-      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
-      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Use \u001b[32mtidymodels_prefer()\u001b[39m to resolve common conflicts.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(tidyverse)\n",
     "library(tidymodels)\n",
@@ -90,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "975ec8f3",
    "metadata": {},
    "outputs": [
@@ -228,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "782ab970-b85e-4edd-a8c8-9c66bc31d317",
    "metadata": {},
    "outputs": [
@@ -318,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "6382d8c1",
    "metadata": {},
    "outputs": [
@@ -469,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "99a309b0",
    "metadata": {},
    "outputs": [
@@ -544,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "0b09dfa3-50f2-49f4-96e4-9703355d4ef7",
    "metadata": {},
    "outputs": [
@@ -624,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "6df7556f-fdaf-4895-b6a4-de74fe0f6de5",
    "metadata": {},
    "outputs": [
@@ -667,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "b102005c-9d1a-4d82-9ca5-d2ea8a9a0744",
    "metadata": {},
    "outputs": [
@@ -710,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "7dfc0240-b18d-4d86-822a-46c3d4a60fe4",
    "metadata": {},
    "outputs": [
@@ -753,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "id": "7ed3f7ac-0f0a-4832-93f6-57b2d677c082",
    "metadata": {},
    "outputs": [
@@ -796,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "5d5431f2-ad25-4a41-8303-4a47298adc25",
    "metadata": {},
    "outputs": [
@@ -839,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "7ea60bec-d06b-40cc-9285-bf38460042b7",
    "metadata": {},
    "outputs": [
@@ -902,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "id": "07f80930-153a-4208-9ae3-6a209ae707e5",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "db985cc1-4da8-446d-8800-81dae475f9d9",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "id": "c24b0a02-444c-4b92-8fcb-3466b77977c6",
    "metadata": {},
    "outputs": [
@@ -1138,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "cddc4fce-b6fd-48a8-88aa-67dfc916d648",
    "metadata": {},
    "outputs": [],
@@ -1156,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "id": "3ec3f0f9-bf47-490e-a2fe-9e919ba27f4b",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "id": "551dac76-0c8f-4d86-bc13-1213c838ea33",
    "metadata": {},
    "outputs": [
@@ -1310,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "id": "40f0a5f9-2423-462d-bbab-27ac719421a9",
    "metadata": {},
    "outputs": [
@@ -1382,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "id": "3434c7ba-0d97-481a-8d68-977126ea1134",
    "metadata": {},
    "outputs": [
@@ -1460,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "id": "24db47a5-456f-4eb5-bb32-9d415f1f9f62",
    "metadata": {},
    "outputs": [
@@ -1509,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "id": "dc6e3b97-dea4-4e8c-956d-17ec5fb86e56",
    "metadata": {},
    "outputs": [
@@ -1531,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "id": "c902bded-71c1-4387-b896-2cd7bce957a6",
    "metadata": {},
    "outputs": [
@@ -1581,9 +1545,9 @@
     "\n",
     "In conclusion, our model's accuracy is 60.85% when predicting on the testing data. We can compare this to the majority classifier, which always predicts the majority class, to assess its performance. In regards to our training data, the majority classifier would have an accuracy of 62.69% because the majority of observations in the training data do not have heart disease as seen in table 4. Our model has a lower accuracy than the majority classifier. This means a model that predicts no heart disease for every new observation would be more accurate to the true class than the model we trained using the selected predictors. There are several potential reasons why our model's accuracy is lower. Firstly, the dataset is relatively small so there are not many observations on which to train and predict an accurate model. Secondly, the correlation between the predictor variables in relation to the diagnosis was weak, as shown in figure 3, which could have made the majority vote in the knn classification less accurate to an observation's true class. It was not necessarily clear whether high cholesterol or lower maximum heart rate indicated a higher risk of heart disease because the datapoints were relatively evenly distributed and there were several outliers. Thirdly, choosing 11 neighbours when there were only 201 observations in the training data could have caused underfitting. This occurs when too many of the training observations help to determine the class of the new observations, resulting in an averaging effect where the boundary between classes becomes less distinct; the model isn't influenced enough by the training data and will not predict well on new data. \n",
     "\n",
-    "We expected that our classification model would accurately predict whether individuals have heart disease based on its relationship to age and maximum heart rate, as shown in figures 1-6. However, according to table 9, the model made 17 false negatives and 10 false positives. Both of which can have adverse effects when applied to health care. If a new patient is incorrectly diagnosed to have heart disease by the model, it could cause the patient to worry and be given medication unnecessarily. Similarly, if a new patient is incorrectly diagnosed to not have heart disease, they may not recieve proper medical attention and it could result in death. If the model could correctly predict the presence of heart disease with high accuracy, it would provide faster diagnoses for people with risk factors for heart disease. By predicting the presence of heart disease earlier, this could improve healthcare through early administration of treatments. With further improvement, this model could be used to diagnose the risk of heart disease. To improve our model, we could use the kmeans clustering algorithm to better determine the relationship between predictor variables and diagnosis, which may have not been clear from figures 1-6. Another improvement could be using 10 fold cross validation instead of 5 fold to get a more accurate estimate of the accuracies to choose a more optimal K value, though this would results in a higher computation time and require a faster computer. Further, we could change the split to have more data in the testing set so that we can get a better estimate of its performance, or get new observations to test on so that the entire dataset could be used to train the model. \n",
+    "We expected that our classification model would accurately predict whether individuals have heart disease based on its relationship to age and maximum heart rate, as shown in figures 1-6. However, according to table 9, the model made 17 false negatives and 10 false positives. Both of which can have adverse effects when applied to health care. If a new patient is incorrectly diagnosed to have heart disease by the model, it could cause the patient to worry and be given medication unnecessarily. Similarly, if a new patient is incorrectly diagnosed to not have heart disease, they may not recieve proper medical attention and it could result in death. If the model could correctly predict the presence of heart disease with high accuracy, it would provide faster diagnoses for people with risk factors for heart disease. By predicting the presence of heart disease earlier, this could improve healthcare through early administration of treatments. With further improvement, this model could be used to diagnose the risk of heart disease. To improve our model, we could use the kmeans clustering algorithm to better determine the relationship between predictor variables and diagnosis, which may have not been clear from figures 1-6. Another improvement could be using 10-fold cross validation instead of 5-fold to get a better estimate of the accuracies to choose a more optimal K value, though this could increase computation time and require a faster computer. We could also change the split to have more data in the testing set so that we can better estimate its performance, or get new observations to test on so that the entire dataset can be used to train the model. \n",
     "\n",
-    "Further data analysis questions include whether other variables aside from those in the Hungarian data set contribute to heart disease and could improve the accuracy of our model. We could also question whether incorporating data from other countries into our model would increase its accuracy. Lastly, we could question how this algorithm could be used clinically to diagnose heart disease. \n",
+    "Further data analysis questions include whether other variables besides those in the Hungarian data set contribute to heart disease and could improve our model's accuracy. We could also question whether incorporating data from other countries into our model would increase its accuracy. Lastly, we could question how this algorithm could be used clinically to diagnose heart disease. \n",
     "\n",
     "*improve the accuracy by familaraizing the diagnosis symptom. and also maybe we can take more relative variables into our model to improve the comprehensive analyzinng ability"
    ]
@@ -1595,16 +1559,24 @@
    "source": [
     "**REFERENCES**\n",
     "\n",
-    "World Health Organization. (n.d.). Cardiovascular diseases. World Health Organization. Retrieved March 10, 2023, from https://www.who.int/health-topics/cardiovascular-diseases/ \n",
-    "\n",
     "Centers for Disease Control and Prevention. (2022, July 12). About heart disease. Centers for Disease Control and Prevention. Retrieved March 10, 2023, from https://www.cdc.gov/heartdisease/about.htm \n",
-    "\n",
-    "WebMD. (n.d.). High cholesterol and high blood pressure. WebMD. Retrieved March 10, 2023, from https://www.webmd.com/cholesterol-management/high-cholesterol-and-high-blood-pressure \n",
     "\n",
     "UCI Machine Learning Repository: Heart disease data set. (n.d.). Retrieved March 10, 2023, from https://archive.ics.uci.edu/ml/datasets/Heart+Disease \n",
     "\n",
-    "What your heart rate is telling you. Harvard Health. (2020, August 30). Retrieved March 11, 2023, from https://www.health.harvard.edu/heart-health/what-your-heart-rate-is-telling-you"
+    "WebMD. (n.d.). High cholesterol and high blood pressure. WebMD. Retrieved March 10, 2023, from https://www.webmd.com/cholesterol-management/high-cholesterol-and-high-blood-pressure\n",
+    "\n",
+    "What your heart rate is telling you. Harvard Health. (2020, August 30). Retrieved March 11, 2023, from https://www.health.harvard.edu/heart-health/what-your-heart-rate-is-telling-you\n",
+    "\n",
+    "World Health Organization. (n.d.). Cardiovascular diseases. World Health Organization. Retrieved March 10, 2023, from https://www.who.int/health-topics/cardiovascular-diseases/ "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48be3c0d-0d83-4c05-b477-be434776ae68",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
