--- a/Project Report Final.ipynb
+++ b/Project Report Final.ipynb
@@ -26,10 +26,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "id": "20fcd609-06c2-4ffb-834e-c863073405cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching packages\u001b[22m ─────────────────────────────────────── tidyverse 1.3.1 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.6     \u001b[32m✔\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtibble \u001b[39m 3.1.7     \u001b[32m✔\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.9\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mtidyr  \u001b[39m 1.2.0     \u001b[32m✔\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mreadr  \u001b[39m 2.1.2     \u001b[32m✔\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "── \u001b[1mAttaching packages\u001b[22m ────────────────────────────────────── tidymodels 1.0.0 ──\n",
+      "\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mbroom       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mrsample     \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mdials       \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mtune        \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34minfer       \u001b[39m 1.0.2     \u001b[32m✔\u001b[39m \u001b[34mworkflows   \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mmodeldata   \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mworkflowsets\u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mparsnip     \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34myardstick   \u001b[39m 1.0.0\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mrecipes     \u001b[39m 1.0.1     \n",
+      "\n",
+      "── \u001b[1mConflicts\u001b[22m ───────────────────────────────────────── tidymodels_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mscales\u001b[39m::\u001b[32mdiscard()\u001b[39m masks \u001b[34mpurrr\u001b[39m::discard()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m   masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mfixed()\u001b[39m  masks \u001b[34mstringr\u001b[39m::fixed()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
+      "\u001b[34m•\u001b[39m Search for functions across packages at \u001b[32mhttps://www.tidymodels.org/find/\u001b[39m\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(tidymodels)\n",
@@ -54,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "id": "975ec8f3",
    "metadata": {},
    "outputs": [
@@ -192,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "id": "782ab970-b85e-4edd-a8c8-9c66bc31d317",
    "metadata": {},
    "outputs": [
@@ -282,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "6382d8c1",
    "metadata": {},
    "outputs": [
@@ -433,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "99a309b0",
    "metadata": {},
    "outputs": [
@@ -508,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "0b09dfa3-50f2-49f4-96e4-9703355d4ef7",
    "metadata": {},
    "outputs": [
@@ -588,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "6df7556f-fdaf-4895-b6a4-de74fe0f6de5",
    "metadata": {},
    "outputs": [
@@ -631,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "b102005c-9d1a-4d82-9ca5-d2ea8a9a0744",
    "metadata": {},
    "outputs": [
@@ -674,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "7dfc0240-b18d-4d86-822a-46c3d4a60fe4",
    "metadata": {},
    "outputs": [
@@ -717,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "id": "7ed3f7ac-0f0a-4832-93f6-57b2d677c082",
    "metadata": {},
    "outputs": [
@@ -760,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "id": "5d5431f2-ad25-4a41-8303-4a47298adc25",
    "metadata": {},
    "outputs": [
@@ -803,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "7ea60bec-d06b-40cc-9285-bf38460042b7",
    "metadata": {},
    "outputs": [
@@ -866,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "id": "07f80930-153a-4208-9ae3-6a209ae707e5",
    "metadata": {},
    "outputs": [
@@ -1023,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 14,
    "id": "db985cc1-4da8-446d-8800-81dae475f9d9",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "id": "c24b0a02-444c-4b92-8fcb-3466b77977c6",
    "metadata": {},
    "outputs": [
@@ -1102,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "id": "cddc4fce-b6fd-48a8-88aa-67dfc916d648",
    "metadata": {},
    "outputs": [],
@@ -1120,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 17,
    "id": "3ec3f0f9-bf47-490e-a2fe-9e919ba27f4b",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 18,
    "id": "551dac76-0c8f-4d86-bc13-1213c838ea33",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "id": "40f0a5f9-2423-462d-bbab-27ac719421a9",
    "metadata": {},
    "outputs": [
@@ -1346,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 20,
    "id": "3434c7ba-0d97-481a-8d68-977126ea1134",
    "metadata": {},
    "outputs": [
@@ -1424,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 21,
    "id": "24db47a5-456f-4eb5-bb32-9d415f1f9f62",
    "metadata": {},
    "outputs": [
@@ -1473,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 24,
    "id": "dc6e3b97-dea4-4e8c-956d-17ec5fb86e56",
    "metadata": {},
    "outputs": [
@@ -1484,110 +1520,6 @@
       "\u001b[1m\u001b[22m`summarise()` has grouped output by '.pred_class'. You can override using the\n",
       "`.groups` argument.\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A grouped_df: 4 × 3</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>.pred_class</th><th scope=col>diagnosis</th><th scope=col>count</th></tr>\n",
-       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>0</td><td>0</td><td>33</td></tr>\n",
-       "\t<tr><td>0</td><td>1</td><td>17</td></tr>\n",
-       "\t<tr><td>1</td><td>0</td><td>10</td></tr>\n",
-       "\t<tr><td>1</td><td>1</td><td> 9</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A grouped\\_df: 4 × 3\n",
-       "\\begin{tabular}{lll}\n",
-       " .pred\\_class & diagnosis & count\\\\\n",
-       " <fct> & <fct> & <int>\\\\\n",
-       "\\hline\n",
-       "\t 0 & 0 & 33\\\\\n",
-       "\t 0 & 1 & 17\\\\\n",
-       "\t 1 & 0 & 10\\\\\n",
-       "\t 1 & 1 &  9\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A grouped_df: 4 × 3\n",
-       "\n",
-       "| .pred_class &lt;fct&gt; | diagnosis &lt;fct&gt; | count &lt;int&gt; |\n",
-       "|---|---|---|\n",
-       "| 0 | 0 | 33 |\n",
-       "| 0 | 1 | 17 |\n",
-       "| 1 | 0 | 10 |\n",
-       "| 1 | 1 |  9 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  .pred_class diagnosis count\n",
-       "1 0           0         33   \n",
-       "2 0           1         17   \n",
-       "3 1           0         10   \n",
-       "4 1           1          9   "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A grouped_df: 4 × 4</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>.pred_class</th><th scope=col>diagnosis</th><th scope=col>count</th><th scope=col>heart_diagnosis</th></tr>\n",
-       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>0</td><td>0</td><td>33</td><td>No Heart Disease</td></tr>\n",
-       "\t<tr><td>0</td><td>1</td><td>17</td><td>Heart Disease   </td></tr>\n",
-       "\t<tr><td>1</td><td>0</td><td>10</td><td>No Heart Disease</td></tr>\n",
-       "\t<tr><td>1</td><td>1</td><td> 9</td><td>Heart Disease   </td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A grouped\\_df: 4 × 4\n",
-       "\\begin{tabular}{llll}\n",
-       " .pred\\_class & diagnosis & count & heart\\_diagnosis\\\\\n",
-       " <fct> & <fct> & <int> & <chr>\\\\\n",
-       "\\hline\n",
-       "\t 0 & 0 & 33 & No Heart Disease\\\\\n",
-       "\t 0 & 1 & 17 & Heart Disease   \\\\\n",
-       "\t 1 & 0 & 10 & No Heart Disease\\\\\n",
-       "\t 1 & 1 &  9 & Heart Disease   \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A grouped_df: 4 × 4\n",
-       "\n",
-       "| .pred_class &lt;fct&gt; | diagnosis &lt;fct&gt; | count &lt;int&gt; | heart_diagnosis &lt;chr&gt; |\n",
-       "|---|---|---|---|\n",
-       "| 0 | 0 | 33 | No Heart Disease |\n",
-       "| 0 | 1 | 17 | Heart Disease    |\n",
-       "| 1 | 0 | 10 | No Heart Disease |\n",
-       "| 1 | 1 |  9 | Heart Disease    |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  .pred_class diagnosis count heart_diagnosis \n",
-       "1 0           0         33    No Heart Disease\n",
-       "2 0           1         17    Heart Disease   \n",
-       "3 1           0         10    No Heart Disease\n",
-       "4 1           1          9    Heart Disease   "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1595,19 +1527,15 @@
     "    select(.pred_class, diagnosis)|>\n",
     "    group_by(.pred_class, diagnosis)|>\n",
     "    summarize(count = n())\n",
-    "conf_table\n",
     "\n",
     "renamed_conf_table <- conf_table |>\n",
-    "    mutate(heart_diagnosis = str_replace(diagnosis, \"0\", \"No Heart Disease\"))\n",
-    "    \n",
-    "renamed_conf_table <- renamed_conf_table |>\n",
-    "    mutate(heart_diagnosis = str_replace(heart_diagnosis, \"1\", \"Heart Disease\"))\n",
-    "renamed_conf_table"
+    "    mutate(heart_diagnosis = str_replace(diagnosis, \"0\", \"No Heart Disease\")) |>\n",
+    "    mutate(heart_diagnosis = str_replace(heart_diagnosis, \"1\", \"Heart Disease\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 25,
    "id": "c902bded-71c1-4387-b896-2cd7bce957a6",
    "metadata": {},
    "outputs": [
