--- a/Project Report Final.ipynb
+++ b/Project Report Final.ipynb
@@ -61,7 +61,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Search for functions across packages at \u001b[32mhttps://www.tidymodels.org/find/\u001b[39m\n",
+      "\u001b[34m•\u001b[39m Use \u001b[32mtidymodels_prefer()\u001b[39m to resolve common conflicts.\n",
       "\n"
      ]
     }
@@ -215,7 +215,7 @@
    "id": "688e80c3-0dc9-42a6-83fb-fbffe988df45",
    "metadata": {},
    "source": [
-    "**Table 1:** Heart Data after adding column names "
+    "**Table 1:** Heart data after adding column names "
    ]
   },
   {
@@ -305,7 +305,7 @@
    "id": "463c760f-2648-4a32-a709-7c20405ea2ce",
    "metadata": {},
    "source": [
-    "**Table 2:** Tidy Data with missing values removed"
+    "**Table 2:** Tidy data with missing values removed"
    ]
   },
   {
@@ -456,7 +456,7 @@
    "id": "21517b85-b568-45a6-be0c-157bb2c178aa",
    "metadata": {},
    "source": [
-    "**Table 3:** Training and Testing Data with all potential predictors"
+    "**Table 3:** Training and testing data with all potential predictor variables"
    ]
   },
   {
@@ -531,7 +531,7 @@
    "id": "4843fd34-567d-4bef-890d-26449a2f3828",
    "metadata": {},
    "source": [
-    "**Table 4:** Count and Percentage with (1) and without (0) heart disease"
+    "**Table 4:** Count and percentage with (1) and without (0) heart disease"
    ]
   },
   {
@@ -603,7 +603,7 @@
    "id": "f2612b0d-2fb2-4a7b-b131-c17fbf7d39f8",
    "metadata": {},
    "source": [
-    "**Table 5:** Mean Values for each potential predictor variable"
+    "**Table 5:** Mean values for each potential predictor variable"
    ]
   },
   {
@@ -1046,7 +1046,7 @@
    "id": "c35f3e2f-485f-4fb4-b8fd-706dc6b75367",
    "metadata": {},
    "source": [
-    "**Table 6:** Training and Testing data"
+    "**Table 6:** Training and testing data"
    ]
   },
   {
@@ -1246,7 +1246,7 @@
    "id": "a8c0670c-332a-40be-adbd-a943315b5613",
    "metadata": {},
    "source": [
-    "**Table 7:** Accuracy at Different K Values"
+    "**Table 7:** Accuracy at different K values"
    ]
   },
   {
@@ -1297,7 +1297,7 @@
    "id": "e99d73c3-8407-4c1c-bd3f-19109fcd20ac",
    "metadata": {},
    "source": [
-    "According to figure 7, k=11 reports the highest accuracy (69.65%). Hence, we choose 11 neighbours for our model because this provides the most accurate predictions."
+    "According to figure 7, k=11 reports the highest accuracy (68.11%). Hence, we choose 11 neighbours for our model because this provides the most accurate predictions."
    ]
   },
   {
@@ -1455,7 +1455,15 @@
    "id": "5c2c5ec7-4927-4843-9306-0cb7f81be586",
    "metadata": {},
    "source": [
-    "**Table 8:** Accuracy of the Model"
+    "**Table 8:** Accuracy of the model on the testing data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1a72dc3-90de-4bb8-8461-ff0a1d5037f4",
+   "metadata": {},
+   "source": [
+    "Table 8 shows our model predicted the class of the testing data with an accuracy of 60.87%. "
    ]
   },
   {
@@ -1488,7 +1496,7 @@
    "id": "5a836fe1-5940-47f6-a8e6-0888b80c6cb6",
    "metadata": {},
    "source": [
-    "**Table 9:** Confusion Matrix of the predictions on the testing data"
+    "**Table 9:** Confusion matrix of the predictions on the testing data"
    ]
   },
   {
@@ -1509,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "dc6e3b97-dea4-4e8c-956d-17ec5fb86e56",
    "metadata": {},
    "outputs": [
@@ -1535,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "c902bded-71c1-4387-b896-2cd7bce957a6",
    "metadata": {},
    "outputs": [
@@ -1571,9 +1579,7 @@
    "id": "838acd96-b537-4c8d-9f61-38eb5aa3f2ed",
    "metadata": {},
    "source": [
-    "Figure 8 shows the same information as table 9. The bar on the right shows observations in the testing data with true class of no heart disease and the bar on the left shows observations with true class of heart disease. \n",
-    "\n",
-    "This means the model is better at predicting on new observations that do not have heart disease than predicting on new observations that have heart disease. In a clinical setting, this is significantly worse because it is more dangerous to incorrectly predict a patient has no heart disease when they really do have it. \n"
+    "Figure 8 shows the same information as table 9. The bar on the right shows observations in the testing data with true class of no heart disease and the bar on the left shows observations with true class of heart disease. This means the model is better at predicting on new observations that do not have heart disease than predicting on new observations that have heart disease. In a clinical setting, this is significantly worse because it is more dangerous to incorrectly predict a patient has no heart disease when they really do have it. \n"
    ]
   },
   {
@@ -1583,13 +1589,13 @@
    "source": [
     "**OUTCOMES AND SIGNIFICANCE** \n",
     "\n",
-    "In conclusion, our model's accuracy is 60.85% when predicting on the testing data. We can compare this to the majority classifier, which always predicts the majority class, to assess its performance. In regards to our training data, the majority classifier would have an accuracy of 62.69% because the majority of observations in the training data do not have heart disease as seen in table 4. Our model has a lower accuracy than the majority classifier. This means a model that predicts no heart disease for every new observation would be more accurate to the true class than the model we trained using the selected predictors. There are several potential reasons why our model's accuracy is lower. Firstly, the dataset is relatively small so there are not many observations on which to train and predict an accurate model. Secondly, the correlation between the predictor variables in relation to the diagnosis was weak, as shown in figure 3, which could have made the majority vote in the knn classification less accurate to an observation's true class. It was not necessarily clear whether high cholesterol or lower maximum heart rate indicated a higher risk of heart disease because the datapoints were relatively evenly distributed and there were several outliers. Thirdly, choosing 11 neighbours when there were only 201 observations in the training data could have caused underfitting. This occurs when too many of the training observations help to determine the class of the new observations, resulting in an averaging effect where the boundary between classes becomes less distinct; the model isn't influenced enough by the training data and will not predict well on new data. \n",
+    "In conclusion, our model's accuracy is 60.87% when predicting on the testing data. We can compare this to the majority classifier, which always predicts the majority class, to assess its performance. In regards to our training data, the majority classifier would have an accuracy of 62.69% because the majority of observations in the training data do not have heart disease as seen in table 4. Our model has a lower accuracy than the majority classifier. This means a model that predicts no heart disease for every new observation would be more accurate to the true class than the model we trained using the selected predictors. There are several potential reasons why our model's accuracy is lower. Firstly, the dataset is relatively small so there are not many observations on which to train and predict an accurate model. Secondly, the correlation between the predictor variables in relation to the diagnosis was weak, as shown in figure 3, which could have made the majority vote in the knn classification less accurate to an observation's true class. It was not necessarily clear whether age or lower maximum heart rate indicated a higher risk of heart disease because the datapoints were relatively evenly distributed by diagnosis. Thirdly, choosing 11 neighbours when there were only 201 observations in the training data could have caused slight underfitting. This occurs when too many of the training observations help to determine the class of the new observations, resulting in an averaging effect where the model isn't influenced enough by the training data. This may have been why it did not predict well on our testing data.\n",
     "\n",
-    "We expected that our classification model would accurately predict whether individuals have heart disease based on its relationship to age and maximum heart rate, as shown in figures 1-6. However, according to table 9, the model made 17 false negatives and 10 false positives. Both of which can have adverse effects when applied to health care. If a new patient is incorrectly diagnosed to have heart disease by the model, it could cause the patient to worry and be given medication unnecessarily. Similarly, if a new patient is incorrectly diagnosed to not have heart disease, they may not recieve proper medical attention and it could result in death. If the model could correctly predict the presence of heart disease with high accuracy, it would provide faster diagnoses for people with risk factors for heart disease. By predicting the presence of heart disease earlier, this could improve healthcare through early administration of treatments. With further improvement, this model could be used to diagnose the risk of heart disease. To improve our model, we could use the kmeans clustering algorithm to better determine the relationship between predictor variables and diagnosis, which may have not been clear from figures 1-6. Another improvement could be using 10-fold cross validation instead of 5-fold to get a better estimate of the accuracies to choose a more optimal K value, though this could increase computation time and require a faster computer. We could also change the split to have more data in the testing set so that we can better estimate its performance, or get new observations to test on so that the entire dataset can be used to train the model. \n",
+    "We expected that our classification model would accurately predict whether individuals have heart disease based on its relationship to age and maximum heart rate, as shown in figures 1-6. However, according to table 9, the model made 17 false negatives and 10 false positives. Both of which can have adverse effects when applied to health care. If a new patient is incorrectly diagnosed to have heart disease by the model, it could cause the patient to worry and be given medication unnecessarily. Similarly, if a new patient is incorrectly diagnosed to not have heart disease, they may not recieve proper medical attention and it could result in death. If the model could correctly predict the presence of heart disease with high accuracy, it would provide faster diagnoses for people with risk factors for heart disease. By predicting the presence of heart disease earlier, this could improve healthcare through early administration of treatments. With further improvement, this model could be used to accurately diagnose the presence of heart disease. \n",
     "\n",
-    "Further data analysis questions include whether other variables besides those in the Hungarian data set contribute to heart disease and could improve our model's accuracy. We could also question whether incorporating data from other countries into our model would increase its accuracy. Lastly, we could question how this algorithm could be used clinically to diagnose heart disease. \n",
+    "To improve our model, we could use the kmeans clustering algorithm to better determine the relationship between predictor variables and diagnosis, which may have not been clear from figures 1-6. Another improvement could be using 10-fold cross validation instead of 5-fold to get a better estimate of the accuracies to choose a more optimal K value, though this could increase computation time and require a faster computer. We could also change the split to have more data in the testing set so that we can better estimate its performance, or get new observations to test on so that the entire dataset can be used to train the model. \n",
     "\n",
-    "*improve the accuracy by familaraizing the diagnosis symptom. and also maybe we can take more relative variables into our model to improve the comprehensive analyzinng ability"
+    "Further data analysis questions include whether other variables besides those in the Hungarian data set contribute to heart disease and could improve our model's accuracy. We could also question whether incorporating data from other countries into our model would increase the size of the training data and increase its accuracy. Lastly, we could question how this algorithm could be used clinically to diagnose heart disease. "
    ]
   },
   {
